# supercell

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  environment.py  graders.py  inference.py  models.py  openenv.yaml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tasks.py  turbo.json
apps/api/: client.py  main.py  models.py
apps/api/server/: app.py  atc_environment.py  graders.py  tasks.py
apps/api/tests/: conftest.py  test_environment.py  test_graders.py  test_inference.py  test_integration.py  test_models.py  test_server.py  test_tasks.py  test_validator_contract.py
apps/video/: package.json  tsconfig.json
apps/video/src/: Root.tsx
apps/video/src/components/: FlightStrip.tsx  Radar.tsx  styles.ts
apps/video/src/compositions/: ATCExplainer.tsx  ATCSimulation.tsx
apps/web/: next.config.ts  package.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: control-panel.tsx  event-log.tsx  flight-strips.tsx  header.tsx  radar-scope.tsx  score-breakdown.tsx  weather-panel.tsx
apps/web/src/lib/: api.ts  types.ts
docker/: .dockerignore  Dockerfile  Dockerfile.dev
scripts/: generate_narration.py  generate_pdf.py  inference.py  inference_hf.py  train_dqn.py
server/: __init__.py  app.py  environment.py  graders.py  models.py  tasks.py
static/: index.html  radar.js  style.css
