[project]
name = "supercell"
version = "1.0.0"
description = "SUPERCELL — Monsoon Mumbai ATC Emergency Triage, an OpenEnv-compliant environment for agent evaluation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.6",
    "openai>=1.50.0",
]

[project.scripts]
# Required by `openenv validate` — must be named `server` and reference a main() function.
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
